# django-tropipy

./: CONTRIBUTING  README.rst  pyproject.toml  setup.cfg
django_tropipy/: apps.py  common.py  tests.py  urls.py  views.py
