[metadata]
name = django-tropipy
version = 1.0
description = A Django app for integrating www.tropipay.com payment gateway.
long_description = file: README.md
url = https://github.com/LhTBL/django-tropipy
author = Mario Javier Tamayo Marrero
author_email = mario.tamayo@lighthousetech.io
license = GNU General Public License v3 (GPLv3)
keywords = django, cuba, tropipay
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
